<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_action"
        android:icon="@drawable/searchpreference_ic_search"
        android:iconTint="#ffffff"
        android:title="title"
        app:iconTint="#ffffff"
        app:showAsAction="collapseActionView|ifRoom" />
</menu>

