...

    <de.KnollFrank.settingssearch.preference.custom.ReversedListPreference
        android:entries="@android:array/imProtocols"
        android:entryValues="@android:array/imProtocols"
        android:key="keyOfReversedListPreference"
        android:summary="summary of ReversedListPreference"
        android:title="title of ReversedListPreference" />

    <de.KnollFrank.settingssearch.preference.custom.CustomDialogPreference
        android:key="keyOfSomeCustomDialogPreference"
        android:summary="summary of custom DialogPreference"
        android:title="some custom DialogPreference" />

...

    <DropDownPreference
        android:entries="@android:array/imProtocols"
        android:entryValues="@android:array/imProtocols"
        android:key="keyOfImProtocols"
        android:summary="im Protocols summary"
        android:title="im Protocols title" />

    <MultiSelectListPreference
        android:dialogTitle="dialog title of a multi select list preference"
        android:entries="@android:array/phoneTypes"
        android:entryValues="@android:array/phoneTypes"
        android:key="multilist"
...
